<resources>
    <string name="app_name">Katalog Film (Penyimpanan Lokal)</string>
    <!--navigation-->
    <string name="title_movie">Film</string>
    <string name="title_tvShow">Acara TV</string>
    <string name="title_favorite">Favorit</string>
    <!--//-->
    <string name="change_language_settings">Ubah pengaturan bahasa</string>
    <string name="Movies"> Film </string>
    <string name="TvShows"> Acara TV </string>
    <string name="judul_film" translatable="false">Judul Film</string>
    <string name="_7_0" translatable="false">7.0</string>
    <string name="poster">poster</string>
    <string name="bintang">bintang</string>
    <string name="overview">Ikhtisar</string>
    <string name="detailfilm">Detail</string>
    <string name="loding">Memuat.....</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="addFav">Di tambahkan ke favorite!</string>
    <string name="questionFav">Apakah ingin menghapus dari daftar favorite?</string>
    <string name="ya">Ya</string>
    <string name="successDel">Berhasil menghapus!</string>
    <string name="tidak">Tidak</string>
    <string name="noFavData">Tidak ada favorit data disini!</string>
    <string name="nodatafound">Tidak ada data yang ditemukan!</string>
    <string name="presslong">Tekan lama untuk menghapus atau geser kiri atau kanan untuk menghapus</string>
    <string name="appwidget_text">Film Favorit</string>
    <string name="add_widget">Add widget</string>
    <string name="no_favorite">No Favorite</string>

    <!--//-->
    <string name="action_notification">Notifikasi</string>
    <string name="key_reminder_daily">key_daily_reminder</string>
    <string name="label_daily_reminder_summary">Turn on/off daily reminder</string>
    <string name="label_daily_reminder_title">Pengingat Harian</string>
    <string name="label_upcoming_reminder_title">Pengingat Mendatang</string>
    <string name="key_reminder_upcoming">key_upcoming_reminder</string>
    <string name="label_upcoming_reminder_summary">Turn on/off upcoming reminder</string>
    <string name="key_setting_locale">key_setting_locale</string>
    <string name="label_setting_locale_summary">Setting Locale</string>
    <string name="label_setting_locale_title">Change your phone localization</string>
    <string name="msg_daily_reminder">Hai, aplikasi film sedang menunggu Anda!</string>
    <string name="upcoming_reminder_msg">Hai, hari ini adalah rilis  </string>
    <string name="release_reminder">Pengingat rilis film</string>
    <string name="reminder_showing_the_movie_that_released_today">Pengingat menunjukkan film yang dirilis hari ini</string>
    <string name="reminder_for_return_top_app">Pengingat untuk kembali ke aplikasi</string>
    <string name="reminder">Pengingat</string>
    <string name="search_movie">Cari Film</string>
    <string name="search_tv_show">Cari Acara TV</string>


</resources>
