<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailMovieActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/white"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" >

            <TextView
                android:id="@+id/judldetailtol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:text="@string/judul_film"/>
        </android.support.v7.widget.Toolbar>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgDetailMovie"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/poster"
                tools:srcCompat="@tools:sample/backgrounds/scenic[1]" />

            <TextView
                android:id="@+id/tvJudulDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20sp"
                tools:text="@string/judul_film"
                android:textStyle="bold|normal"
                app:layout_constraintEnd_toEndOf="@+id/imgDetailMovie"
                app:layout_constraintStart_toStartOf="@+id/imgDetailMovie"
                app:layout_constraintTop_toBottomOf="@+id/imgDetailMovie" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="40dp"
                android:visibility="visible"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/tvJudulDetail"
                app:layout_constraintTop_toBottomOf="@+id/tvJudulDetail"
                android:src="@drawable/star" />

            <TextView
                android:id="@+id/tvDetailScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="192dp"
                android:textSize="30sp"
                tools:text="@string/_7_0"
                android:textStyle="bold|normal"
                app:layout_constraintEnd_toEndOf="@+id/tvJudulDetail"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/tvJudulDetail" />

            <com.github.ivbaranov.mfb.MaterialFavoriteButton
                android:id="@+id/favorite_nice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.907"
                app:layout_constraintStart_toEndOf="@+id/tvDetailScore"
                app:layout_constraintTop_toBottomOf="@+id/tvJudulDetail"
                app:layout_constraintVertical_bias="0.533"
                app:mfb_bounce_duration="700"
                app:mfb_rotation_angle="216"
                app:mfb_rotation_duration="400"
                app:mfb_size="65"
                app:mfb_type="heart" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/overview"
                android:visibility="visible"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailScore"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/tvDetailDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:maxLines="10"
                tools:text="@string/deskripsi"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.028"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintVertical_bias="0.0" />

            <ProgressBar
                android:id="@+id/progressBarDetailMovie"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</ScrollView>